--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,7 @@ linter:
     prefer_final_fields: true
     prefer_typing_uninitialized_variables: true
     avoid_returning_null: true
-    always_put_control_body_on_new_line: true
+    # always_put_control_body_on_new_line: true
     prefer_single_quotes: true
     unnecessary_brace_in_string_interps: true
     sort_constructors_first: true
